--- a/tlm-stencil/src/components/mw-radio-button/mw-radio-button.css
+++ b/tlm-stencil/src/components/mw-radio-button/mw-radio-button.css
@@ -1,14 +1,26 @@
-/* The container */
-.container {
+/* The mw-radio-button-container */
+.mw-radio-button-container {
   display: flex;
   position: relative;
   cursor: pointer;
   align-items: center;
+  padding-top: var(--mw-component-controls-with-label-padding-tb);
+  padding-bottom: var(--mw-component-controls-with-label-padding-tb);
+  padding-right: var(--mw-component-controls-with-label-padding-r);
+  padding-right: var(--mw-component-controls-with-label-padding-l);
+  gap: var(--mw-component-controls-with-label-gap);
+  color: var(--mw-component-controls-color-label-default)
+  /* TODO label font styling  */
 }
 
+
 /* Hide the browser's default radio button */
-.container input {
-  display: none;
+.mw-radio-button-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
 }
 
 /* Create a custom radio button */
@@ -21,54 +33,73 @@
   align-items: center;
   height: 20px;
   width: 20px;
-  border: 2px solid black;
-  border-radius: 50%;
-  margin: 14px;
+  border: var(--mw-component-checkbox-selected-border-width-unselected) solid var(--mw-component-controls-color-outline-default);
+  border-radius: var(--border-radius-standard-circle);
 }
 
-/* Unchecked & Hover */
-.container:hover input~.mw-radio-button {
-  background: #ff4c4c;
-}
 
 /* Checked */
-.container input:checked~.mw-radio-button {
-  border: 6px solid red;
+.mw-radio-button-container input:checked~.mw-radio-button {
+  border-width: var(--mw-component-checkbox-selected-border-width-default);
+  background-color: var(--mw-component-controls-color-bg-selected);
 }
 
-/* Checked & Hover */
-.container:hover input:checked~.mw-radio-button {
-  border: 6px solid #F86F96;
-  background: none;
+.mw-radio-button-container input:checked~.mw-radio-button:after {
+  content: '';
+  border-radius: var(--border-radius-standard-circle);
+  height: 8px;
+  width: 8px;
+  background-color: var(--mw-component-controls-color-fg-default);
 }
 
+/* Hover States */
+/* Checked, Hover */
+.mw-radio-button-container:hover input:checked~.mw-radio-button {
+  background-color: var(--mw-component-controls-color-bg-hover);
+}
+
+/* Unchecked, Hover */
+.mw-radio-button-container:hover input~.mw-radio-button {
+  background-color: var(--mw-component-controls-color-bg-hover);
+}
+
+/* Pressed States */
+/* Unchecked, Pressed */
+.mw-radio-button-container:active input~.mw-radio-button {
+  background-color: var(--mw-component-controls-color-bg-pressed);
+}
+
+/* Checked, Pressed */
+.mw-radio-button-container:active input:checked~.mw-radio-button {
+  background-color: var(--mw-component-controls-color-bg-pressed);
+}
+
+/* Disabled States */
 /* Disabled */
-.container input:disabled~.mw-radio-button {
-  border: 2px solid grey;
+.mw-radio-button-container input:disabled~.mw-radio-button {
+  border: var(--mw-component-checkbox-selected-border-width-unselected) solid var(--mw-component-controls-color-outline-disabled);
+  background-color: var(--mw-component-controls-color-bg-unselected);
+}
+
+.mw-radio-button-container:has(input:disabled){
   cursor: default;
+  color: var(--mw-component-controls-color-label-disabled)
+
 }
 
-/* Disabled & Hover */
-.container:hover input:disabled~.mw-radio-button {
-  background: none;
+/* Disabled, Checked */
+.mw-radio-button-container input:disabled:checked~.mw-radio-button {
+  background-color: var(--mw-component-controls-color-bg-disabled);
+  border-width: var(--mw-component-checkbox-selected-border-width-default);
 }
 
-/* Disabled & Checked */
-.container input:disabled:checked~.mw-radio-button {
-  border: 6px solid grey;
+.mw-radio-button-container input:disabled:checked~.mw-radio-button:after {
+  background-color: var(--mw-component-controls-color-fg-disabled);
 }
 
-/* Disabled & Checked & Hover */
-.container input:disabled:checked~.mw-radio-button {
-  border: 6px solid grey;
+/* Focus States */
+.mw-radio-button-container input:focus~.mw-radio-button {
+  border: var(--mw-component-checkbox-selected-border-width-unselected) solid var(--mw-component-controls-color-outline-default);
 }
 
-/* Disabled & Checked & Hover */
-input:focus:checked~.mw-radio-button {
-  border: 2px solid black;
-}
 
-/* Disabled & Checked & Hover */
-input:focus~.mw-radio-button {
-  border: 2px solid black;
-}
